<resources>
    <string name="app_name">PrimeraApp</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="goto_register">Go to Register</string>
    <string name="goto_login">Go to Login</string>

    <string name="error_email">Email is required</string>
    <string name="error_password">Password is required</string>
    <string name="logged_in">Logged in</string>
    <string name="no_match">No match</string>

    <string name="registered">Registered</string>

    <string name="error_name">Name is required</string>

    <string name="logout">Logout</string>

    <string name="task_name">Task name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>

    <string name="want_to_delete">Do you wat to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="clean_list">Clean list</string>

</resources>